# auto_telescope

./: .gitignore  .pre-commit-config.yaml  CLAUDE.md  CONTRIBUTING.md  LICENSE  MEMORY.md  README.md  pyproject.toml  requirements.txt  scratchpad.md
.claude/: settings.json
.claude/agents/: code-reviewer.md  docs-writer.md  hardware-researcher.md  test-runner.md
.claude/commands/: commit.md  plan.md  prime.md  review.md  save.md  status.md
.claude/skills/task-board/: SKILL.md
.github/workflows/: python-tests.yml
docs/: PROGRESS.md  architecture.md  safety_guarantees.md
host/: README.md  main.py
host/comms/: receiver.py  sender.py  validator.py
host/config/: constants.py  ui_params.py
host/control/: desired_position.py  error_correction.py  focus_controller.py  tracking_controller.py
host/simulation/: simulator.py  test_data.py
host/state/: session_logs.py  telescope_state.py
host/ui/: display.py  host_interface.py
host/utils/: logger.py  math_utils.py  threading_utils.py
pi/: README.md  main.py
pi/comms/: message_parser.py  tcp_client.py  validator.py
pi/config/: constants.py  pins.py
pi/control/: focus_controller.py  motor_controller.py  safety_manager.py
pi/hardware/: gpio_setup.py  motor_driver.py  sensor_reader.py
pi/state/: error_state.py  telescope_state.py
pi/utils/: debug_helpers.py  logger.py  timer.py
runbooks/: README.md  api_outages.md
shared/: README.md
shared/commands/: focus_command.py  move_command.py  stop_command.py
shared/enums/: command_types.py  status_codes.py
shared/errors/: error_codes.py
shared/protocols/: constants.py  message_validator.py  tcp_protocol.py
shared/state/: camera_state.py  telescope_state.py
src/auto_telescope/: __init__.py
src/auto_telescope/catalog/: __init__.py  curated.py  feasibility.py  simbad.py  solar_system.py  targets.py
src/auto_telescope/conditions/: __init__.py  aggregator.py  cache.py  nws.py  open_meteo.py  seven_timer.py
src/auto_telescope/config/: __init__.py  settings.py  site.py
src/auto_telescope/safety/: __init__.py  interlocks.py
src/auto_telescope/scheduler/: __init__.py  best_time.py
src/auto_telescope/visibility/: __init__.py  coordinates.py  horizons.py  rules.py  windows.py
tests/: conftest.py
tests/host/: test_constants.py  test_desired_position.py  test_display.py  test_error_correction.py  test_focus.py  test_host_interface.py  test_logger.py  test_main.py  test_math_utils.py  test_receiver.py  test_sender.py  test_session_logs.py  test_simulator.py  test_telescope_state.py  test_threading_utils.py  test_tracking.py  test_validator.py
tests/integration/: conftest.py  test_command_flow.py  test_error_handling.py  test_lifecycle.py  test_real_apis.py  test_simbad.py  test_state_reporting.py
tests/integration/cassettes/test_real_apis/: test_aggregator_real_call.yaml  test_nws_real_call.yaml  test_open_meteo_real_call.yaml  test_seven_timer_real_call.yaml
tests/pi/: test_focus_controller.py  test_message_parser.py  test_motor_commands.py  test_safety_manager.py  test_sensors.py  test_state.py  test_tcp_client.py  test_timer.py
tests/property/: test_coordinate_invariants.py
tests/safety/: test_adversarial.py
tests/shared/: test_messages.py
tests/simulator/: test_end_to_end.py
tests/unit/: test_catalog.py  test_conditions_parsing.py  test_config.py  test_coordinates.py  test_safety.py  test_visibility.py
